--- a/config/boards/arm/dao/dao_right_defconfig
+++ b/config/boards/arm/dao/dao_right_defconfig
@@ -1,10 +1,14 @@
 # SPDX-License-Identifier: MIT
 
+CONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_DAO_RIGHT=y
 CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=n
+CONFIG_PM_DEVICE=y
+CONFIG_ZMK_USB=n
+CONFIG_ZMK_BLE=y
 
 # Enable MPU
 CONFIG_ARM_MPU=y
