--- a/config/boards/arm/dao/Kconfig
+++ b/config/boards/arm/dao/Kconfig
@@ -6,3 +6,9 @@ config BOARD_ENABLE_DCDC
 	select SOC_DCDC_NRF52X
 	default y
 	depends on (BOARD_DAO_LEFT || BOARD_DAO_RIGHT)
+
+config CONFIG_BOARD_ENABLE_DCDC_HV
+	bool "Enable High Voltage DCDC converter"
+	select SOC_DCDC_NRF52X
+	default y
+	depends on (BOARD_DAO_LEFT || BOARD_DAO_RIGHT)
